src/assets/stylesheets/ProgressBar.scss
@use './rpf_design_system/spacing' as *;

.progress-bar {
  accent-color: var(--editor-color-theme);
  display: flex;
  align-items: center;
  justify-content: center;
  max-width: 300px;
  margin: auto;

  progress {
    flex: 1;
  }

  .btn-outer {
    padding: $space-0-5;
  }
}

